<?xml version="1.0"?>
<package format="2">
  <name>rospy_package</name>
  <version>0.0.1</version>
  <description>Duang~</description>

  <maintainer email="duangduang.wang@ninebot.com">DDW</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export> 
  
  </export>

</package>